# context-scribe

./: .coverage  .gitignore  CONTRIBUTING.md  README.md  TODO.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: dependabot-automerge.yml  dependency-audit.yml
context_scribe/: main.py
context_scribe/bridge/: mcp_client.py
context_scribe/evaluator/: __init__.py  anthropic_llm.py  base_evaluator.py  claude_llm.py  copilot_cli_llm.py  copilot_llm.py  gemini_cli_llm.py  llm.py  prefilter_template.md  prompt_template.md
context_scribe/models/: evaluator_models.py  interaction.py
context_scribe/observer/: base_provider.py  claude_provider.py  copilot_cli_provider.py  copilot_provider.py  gemini_cli_provider.py  gemini_provider.py
tests/: conftest.py  test_anthropic_evaluator.py  test_claude_daemon.py  test_claude_evaluator.py  test_claude_provider.py  test_copilot_cli_provider.py  test_copilot_daemon.py  test_copilot_llm.py  test_copilot_provider.py  test_daemon.py  test_daemon_errors.py  test_daemons.py  test_dashboard.py  test_gemini_cli_llm.py  test_gemini_cli_llm_advanced.py  test_main.py  test_multi_tool.py  test_prefilter.py  test_provider.py  test_provider_advanced.py  test_provider_watch.py
